--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML + CSS</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <b><i>Dr. Eleanor Gaye</i></b><br>
+    <b>Dr. Eleanor Gaye</b><br>
     <address>Awesome Science faculty<br>
     University of Awesome<br> 
     Bobtown, CA 99999,<br>
@@ -18,7 +18,7 @@
     Email: no_reply@example.com<br><br>
     20 January 2016
 
-    <b><i>Miss Eileen Dover</i></b><br>
+    <b>Miss Eileen Dover</b><br>
     <address>4321 Cliff Top Edge<br>
     University of Awesome<br> 
     Dover, CT9 XXX<br>
