--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <b>Dr. Eleanor Gaye</b><br>
-    <address>Awesome Science faculty<br>
+    <address class="sender-coloumn"> <b>Dr. Eleanor Gaye</b><br>
+    Awesome Science faculty<br>
     University of Awesome<br> 
     Bobtown, CA 99999,<br>
-    USA</adress><br>
+    USA<br>
     Tel:
     123-456-7890 <br>
     Email: no_reply@example.com<br><br>
-    20 January 2016
+    20 January 2016 </adress>
 
-    <b>Miss Eileen Dover</b><br>
-    <address>4321 Cliff Top Edge<br>
+    <address> <b>Miss Eileen Dover</b><br>
+    4321 Cliff Top Edge<br>
     University of Awesome<br> 
     Dover, CT9 XXX<br>
     UK</adress><br>
